--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,6 +1,7 @@
 .main-nav {
   position: relative;
   z-index: 200;
+  padding-top: 1px;
   min-height: 60px;
   background-color: #1f2229;
 
@@ -9,6 +10,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    padding-top: 0;
     background-color: transparent;
   }
 }
