--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -6,6 +6,8 @@
   background-color: #1f2229;
 
   @media (min-width: @desktop-width) {
+    float: left;
+    width: 300px;
     background-color: transparent;
   }
 }
@@ -44,7 +46,7 @@
   .margin();
 
   @media (min-width: @desktop-width) {
-    width: 322px;
+    width: 321px;
   }
 }
 
