--- a/less/blocks/page-main.less
+++ b/less/blocks/page-main.less
@@ -5,6 +5,7 @@
 .page-main__wrapper {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: #f7f8f8;
 
   @media (min-width: @desktop-width) {
     padding-top: 47px;
