--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -19,6 +19,7 @@
 .page-footer__wrapper {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: #373c43;
 
   @media (min-width: @desktop-width) {
     padding-top: 27px;
