--- a/less/style.less
+++ b/less/style.less
@@ -2,6 +2,7 @@
 @import "mixins.less";
 @import "variables.less";
 @import "global.less";
+@import "clearfix.less";
 
 // common styles
 @import "blocks/wrapper.less";
